# monitoring-rs

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
deployment/: kubernetes.yaml
frontend/: .gitignore
frontend/src/: Main.elm
loadgen/: Cargo.toml
loadgen/src/: lib.rs  main.rs
posts/: 0-discovery.md  02-log-collection-part-2-aborted.md  04-log-collection-part-3-rotation.md  07-log-collection-part-6-end-to-end.md  08-log-collection-part-7-consolidating.md  1-log-collection-part-1.md  10-log-collection-part-9-metadata.md  11-log-collection-part-10-housekeeping.md  12-log-collection-part-11-kubernetes-collector.md  13-log-collection-part-12-kubernetes-collector-again.md  14-log-collection-part-13-waxing-philosophical.md  15-log-collection-part-14-ui.md  16-log-collection-part-15-next-steps.md  17-metric-collection-part-1-database-design.md  18-measurement-and-more-db-design.md  2-log-collection-part-2-aborted.md  3-log-collection-part-2-redux.md  4-log-collection-part-3-rotation.md  5-log-collection-part-4-minikube.md  6-log-collection-part-5-recentring.md  6-recentring.md  7-end-to-end.md  9-log-collection-part-8-multi-platform.md
src/: lib.rs  main.rs  test.rs
src/api/: mod.rs
src/database/: mod.rs
src/log_collector/: directory.rs  kubernetes.rs  mod.rs  watcher.rs
src/log_collector/watcher/: inotify.rs  kqueue.rs  mock.rs  mod.rs
src/log_database/: mod.rs
