[package]
name = "monitoring-rs"
version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.1"
inotify = { version = "0.8.3", default-features = false }
log = "0.4.11"
