[package]
name = "monitoring-rs"
version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.1"
log = "0.4.11"
tide = "0.15.0"
async-std = { version = "1.7.0", features = ["attributes"] }
blocking = "1.0.2"
md5 = "0.7.0"
serde_json = "1.0.61"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.8.3", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
kqueue = "1.0.2"

[dev-dependencies]
tempfile = "3.1.0"
tide-testing = "0.1.2"
