[package]
name = "monitoring-rs"
description = "An adventure in building a minimal monitoring pipeline, in Rust."

version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
license = "GPL-3.0-only"
edition = "2018"

readme = true
categories = ["command-line-utilities"]
keywords = ["logging", "metrics", "monitoring"]
repository = "https://github.com/connec/monitoring-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.1"
log = "0.4.11"
tide = "0.16.0"
async-std = { version = "1.7.0", features = ["attributes"] }
blocking = "1.0.2"
md5 = "0.7.0"
serde_json = "1.0.61"
structopt = "0.3.21"
clap = "2.33.3"
kube = "0.48.0"
kube-runtime = "0.48.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.1.1", features = ["rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.8.3", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
kqueue = "1.0.2"

[dev-dependencies]
tempfile = "3.1.0"
tide-testing = "0.1.2"
