[package]
name = "loadgen"
version = "0.1.0"
authors = ["Chris Connelly <chris@connec.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitoring-rs = { path = ".." }
sanakirja = "1.1.2"
serde_json = "1.0.64"
smol = "1.2.5"
structopt = "0.3.21"
tempfile = "3.2.0"
